--- a/style.css
+++ b/style.css
@@ -14,28 +14,39 @@
    html {
       font-size: 1.2em;
     }
+    tw-story {
+      padding: 3em 5%;
+      line-height: 1.5em;
+    }
   }
 
 body {
     background: linear-gradient(0deg, rgba(34,51,195,1) 0%, rgba(0,0,0,1) 16%, rgba(0,0,0,1) 100%);
+    background-attachment: fixed;
 }
 
 canvas {
     width: 100% !important;
     height: 100% !important;
+    position: fixed;
+    z-index: 1;
   }
 
-
+  tw-story{
+    position: relative;
+    z-index: 2;
+    line-height: 1.5em;
+  }
 
   #barrilRadioactivo {
     width: 160px;
     height: 144px;
     background-image: url(img/barrilsprite.png);
-
+    background-size: auto 100%;
     position: fixed;
     left: 50%;
-    bottom: 40px;
-    transform: translate(-50%, -50%);
+    bottom: -1%;
+    transform: translate(-50%, -30%);
     margin: 0 auto;
   }
   
@@ -48,13 +59,14 @@ canvas {
                    }
         @keyframes playX {
       from {background-position-x: 0px;}
-      to {background-position-x: -675px;}
+      to {background-position-x:-137%;}
     }
   
     @keyframes playY {
       from {background-position-y: 0px;}
-      to {background-position-y: -144px;}
+      to {background-position-y:-100%;}
     }
+
 
     #lista{
      
@@ -64,3 +76,5 @@ canvas {
 ul{
   list-style-type: none;
 }
+     
+    }
