--- a/style.css
+++ b/style.css
@@ -20,10 +20,18 @@
     }
   }
 
+  @font-face {
+    font-family: "MrPixel";
+    src: url("./fonts/MrPixel/mister_pixel_regular.woff") format("woff");
+    }
+
 body {
     background: linear-gradient(0deg, rgba(34,51,195,1) 0%, rgba(0,0,0,1) 16%, rgba(0,0,0,1) 100%);
     background-attachment: fixed;
+    font-family: 'MrPixel';
 }
+
+
 
 canvas {
     width: 100% !important;
@@ -41,7 +49,7 @@ canvas {
   #barrilRadioactivo {
     width: 160px;
     height: 144px;
-    background-image: url(img/barrilsprite.png);
+    background-image: url(img/sprite/barril.png);
     background-size: auto 100%;
     position: fixed;
     left: 50%;
@@ -53,13 +61,13 @@ canvas {
       #barrilRadioactivo:hover{
         width: 160px;
         height: 144px;
-        background-image: url(img/barrilsprite.png);
+        background-image: url(img/sprite/barril.png);
         animation: playX 1s steps(4) infinite,
              playY 1s steps(1) infinite;
                    }
         @keyframes playX {
       from {background-position-x: 0px;}
-      to {background-position-x:-137%;}
+      to {background-position-x: -100%;}
     }
   
     @keyframes playY {
@@ -67,14 +75,72 @@ canvas {
       to {background-position-y:-100%;}
     }
 
+    #defengochi {
+      width: 160px;
+      height: 144px;
+      background-image: url(img/sprite/defengochi.png);
+      background-size: auto 100%;
+      position: fixed;
+      left: 50%;
+      bottom: -1%;
+      transform: translate(-50%, -30%);
+      margin: 0 auto;
+    }
+    
+        #defengochi:hover{
+          width: 160px;
+          height: 144px;
+          background-image: url(img/sprite/defengochi.png);
+          animation: playX 1s steps(2) infinite,
+               playY 1s steps(1) infinite;
+                     }
+          @keyframes playX {
+        from {background-position-x: 0%;}
+        to {background-position-x:-100%;}
+      }
+    
+      @keyframes playY {
+        from {background-position-y: 0px;}
+        to {background-position-y:-100%;}
+      }
+  
+      #luceroDelAlba {
+        width: 160px;
+        height: 144px;
+        background-image: url(img/sprite/lucero.png);
+        background-size: auto 100%;
+        position: fixed;
+        left: 50%;
+        bottom: -1%;
+        transform: translate(-50%, -30%);
+        margin: 0 auto;
+      }
+      
+          #luceroDelAlba:hover{
+            width: 160px;
+            height: 144px;
+            background-image: url(img/sprite/lucero.png);
+            animation: playX 1s steps(6) infinite,
+                 playY 1s steps(1) infinite;
+                       }
+            @keyframes playX {
+          from {background-position-x: 0%;}
+          to {background-position-x:-100%;}
+        }
+      
+        @keyframes playY {
+          from {background-position-y: 0px;}
+          to {background-position-y:-100%;}
+        }
+
 
     #lista{
      
       text-align: center;
     }
   
-ul{
-  list-style-type: none;
-}
+  ul{
+    list-style-type: none;
+  }
      
   
