--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@
       font-size: 1.5em;
     }
 
-    .posterInicio{
-      width: 55vw;
-      height: 80vh;
+    .posterInicioDesktop{
+      width: 100vw;
+      height: 90vh;
       display: block;
       margin-left: auto;
       margin-right: auto;
       margin-top: 10%;
       z-index: 2;
+    }
+
+    .posterInicioMobile{
+      display: none;
     }
 
     .seleccionMenu {
@@ -41,7 +45,7 @@
       line-height: 1.5em;
     }
 
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -62,6 +66,10 @@
       z-index: 3;
     }
 
+    .posterInicioDesktop{
+      display: none;
+    }
+
   }
 
 
@@ -80,7 +88,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -98,6 +106,10 @@ and (-webkit-min-device-pixel-ratio: 2) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -115,7 +127,7 @@ and (orientation: portrait) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -133,6 +145,10 @@ and (orientation: portrait) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -150,7 +166,7 @@ and (orientation: landscape) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -169,6 +185,10 @@ and (orientation: landscape) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+
+  .posterInicioDesktop{
+    display: none;
   }
 
 }
@@ -188,7 +208,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -206,6 +226,10 @@ and (-webkit-min-device-pixel-ratio: 2) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -223,7 +247,7 @@ and (orientation: portrait) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -242,6 +266,9 @@ and (orientation: portrait) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -259,7 +286,7 @@ and (orientation: landscape) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -278,6 +305,9 @@ and (orientation: landscape) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 
 }
@@ -297,7 +327,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -315,6 +345,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -332,7 +365,7 @@ and (orientation: portrait) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -350,6 +383,9 @@ and (orientation: portrait) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -367,7 +403,7 @@ and (orientation: landscape) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -385,6 +421,9 @@ and (orientation: landscape) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -403,7 +442,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -421,6 +460,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -438,7 +480,7 @@ and (orientation: portrait) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -456,6 +498,9 @@ and (orientation: portrait) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -483,7 +528,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -501,6 +546,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -518,7 +566,7 @@ and (orientation: portrait) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -536,6 +584,9 @@ and (orientation: portrait) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -553,7 +604,7 @@ and (orientation: landscape) {
     line-height: 1.5em;
   }
 
-  .posterInicio{
+  .posterInicioMobile{
     width: 100vw;
     height: 50vh;
     display: block;
@@ -571,6 +622,9 @@ and (orientation: landscape) {
     right: 0;
     text-align: center;
     z-index: 3;
+  }
+  .posterInicioDesktop{
+    display: none;
   }
 }
 
@@ -589,7 +643,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -607,6 +661,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -624,7 +681,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -642,6 +699,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -659,7 +719,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -677,6 +737,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -695,7 +758,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -713,6 +776,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -730,7 +796,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -748,6 +814,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -765,7 +834,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -783,6 +852,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -801,7 +873,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -819,6 +891,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -838,7 +913,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -856,6 +931,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -875,7 +953,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -893,6 +971,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -911,7 +992,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -929,6 +1010,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -948,7 +1032,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -966,6 +1050,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -985,7 +1072,7 @@ and (orientation: landscape) {
       line-height: 1.5em;
     }
   
-    .posterInicio{
+    .posterInicioMobile{
       width: 100vw;
       height: 50vh;
       display: block;
@@ -1003,6 +1090,9 @@ and (orientation: landscape) {
       right: 0;
       text-align: center;
       z-index: 3;
+    }
+    .posterInicioDesktop{
+      display: none;
     }
 }
 
@@ -1270,6 +1360,7 @@ a:hover, a:active{
   
   ul{
     list-style-type: none;
+    padding: 0;
   }
      
   
