arreglo cajas de texto responsive

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
 
@@ -84,7 +84,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -111,6 +111,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
   .posterInicioDesktop{
     display: none;
   }
+
 }
 
 /* Portrait */
@@ -123,7 +124,7 @@ and (orientation: portrait) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -150,6 +151,7 @@ and (orientation: portrait) {
   .posterInicioDesktop{
     display: none;
   }
+
 }
 
 /* Landscape */
@@ -162,7 +164,7 @@ and (orientation: landscape) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -204,7 +206,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -243,7 +245,7 @@ and (orientation: portrait) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -282,7 +284,7 @@ and (orientation: landscape) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -323,7 +325,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -361,7 +363,7 @@ and (orientation: portrait) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -399,7 +401,7 @@ and (orientation: landscape) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -438,7 +440,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -476,7 +478,7 @@ and (orientation: portrait) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -524,7 +526,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -562,7 +564,7 @@ and (orientation: portrait) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -600,7 +602,7 @@ and (orientation: landscape) {
     font-size: 1.2em;
   }
   tw-story {
-    padding: 3em 5%;
+    padding: 30px 5%;
     line-height: 1.5em;
   }
 
@@ -639,7 +641,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -677,7 +679,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -715,7 +717,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -754,7 +756,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -792,7 +794,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -830,7 +832,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -869,7 +871,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -909,7 +911,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -949,7 +951,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -988,7 +990,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -1028,7 +1030,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
@@ -1068,7 +1070,7 @@ and (orientation: landscape) {
       font-size: 1.2em;
     }
     tw-story {
-      padding: 3em 5%;
+      padding: 30px 5%;
       line-height: 1.5em;
     }
   
